<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/container_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    app:layout_constraintTop_toBottomOf="@id/about_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        app:layout_constraintTop_toTopOf="parent">
        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/budget_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="$200,000,000" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homepage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/md_theme_tertiary"
                android:background="?attr/selectableItemBackground"
                android:textStyle="bold"
                tools:text="https://example.com" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_language"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/original_language_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="English" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />
        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/original_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="The Original Movie Title" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/popularity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="156.78" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/production_countries"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/production_countries_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="USA" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/release_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="12.05.2023" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/revenue_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="$1,500,000,000" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runtime"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/runtime_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="135 minutes" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spoken_languages"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/spoken_languages_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="English, French" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="Released" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tagline"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tagline_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="Movie" />
        </TableRow>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp" />

        <TableRow android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_count"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/vote_count_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="15,478" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>